# sentinel

./: .env.example  .gitignore  README.md  package.json  pbcopy  pnpm-lock.yaml  sentinel.db-shm  sentinel.db-shm.bak  sentinel.db-wal  sentinel.db-wal.bak  sentinel.db.bak  tsconfig.json  tsup.config.ts  vitest.config.ts
docs/: tunnel-setup.md
scripts/: install-hook.ts  install.sh  setup-tunnel.sh  setup-webhook.ts  smee-dev.ts
src/: cli.ts  config.ts  main.ts
src/agents/: claude-code.ts  index.ts  inject.ts  openclaw.ts  prompts.ts
src/db/: index.ts  queries.ts  schema.ts
src/github/: client.ts  events.ts  octokit.ts  poller.ts  repos.ts
src/menubar/: index.ts  ipc.ts
src/menubar/ui/: app.tsx  index.html
src/menubar/ui/components/: EventItem.tsx  EventList.tsx  Settings.tsx
src/notifications/: index.ts
src/server/: index.ts  routes.ts  webhook.ts
src/test/: config.test.ts  db.test.ts  notifications.test.ts  setup.ts
src/test/agents/: auto-unlink.test.ts  claude-code.test.ts  dispatch-routing.test.ts  green-state.test.ts  index.test.ts  inject.test.ts  openclaw.test.ts  prompts.test.ts
src/test/github/: client.test.ts  events.test.ts  poller.test.ts  repos.test.ts
src/test/helpers/: app.ts
src/test/integration/: smoke.test.ts
src/test/menubar/: ipc.test.ts
src/test/scripts/: install-hook.test.ts
src/test/server/: webhook.test.ts
tui/: Cargo.toml
tui/src/: api.rs  app.rs  main.rs  theme.rs  ui.rs
tui/src/views/: audit.rs  config.rs  dashboard.rs  events.rs  mod.rs  sessions.rs
