[package]
name = "sentinel-tui"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "sentinel-tui"
path = "src/main.rs"

[dependencies]
anyhow = "1"
crossterm = "0.28"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
